Add Auth Support
